# experiment-with-gemini-conductor

./: README.md  agent_requirement.md
conductor/: product-guidelines.md  product.md  requirements.md  tech-stack.md  tracks.md
conductor/tracks/01_backend_core/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/02_python_cli/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/03_nextjs_frontend/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/04_documentation/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/core_agent_sdk_20260207/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/fix_nextjs_chat_ui_20260207/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/log_timestamps_20260207/: index.md  metadata.json  plan.md  spec.md
documentation/: architecture.md  backend-explained.md  beginner-guide.md  frontend-nextjs.md  frontend-python.md
nextjs-frontend/: .env.local  package-lock.json  package.json  vitest.config.ts
nextjs-frontend/scripts/: log-formatter.js  test-formatter.sh
nextjs-frontend/src/app/: page.tsx
nextjs-frontend/src/components/: ChatInput.tsx  MessageItem.tsx  MessageList.tsx  (+1 more)
python-backend/: .env  .env.example  config.py  main.py  pyproject.toml
python-backend/agent/: manager.py  schemas.py  session.py
python-backend/tests/: test_agent.py  test_chat.py  test_logging_format.py  test_main.py  test_session.py
python-backend/utils/: streaming.py
python-frontend/: .env  client.py  config.py  main.py  pyproject.toml
python-frontend/tests/: test_cli.py  test_client.py
(+6 files in other folders)
